--- a/rxvt-unicode/PKGBUILD
+++ b/rxvt-unicode/PKGBUILD
@@ -32,7 +32,9 @@ source=("$pkgname-$pkgver.tar.bz2::http://dist.schmorp.de/rxvt-unicode/$pkgname-
         'urxvt.desktop'
         'urxvtc.desktop'
         'urxvt-tabbed.desktop'
-        'screen_c_9_30_half_screen_patch.diff')
+        'half_screen_prompt_fix.diff'
+        'enable-wide-glyphs.patch'
+        'improve-font-rendering.patch')
 sha256sums=('aaa13fcbc149fe0f3f391f933279580f74a96fd312d6ed06b8ff03c2d46672e8'
             'afea78dc25db8cd15da9959baf347b0634f4ef62dd3eeaff0c0a3389986b6a3e'
             '48ef5720d77a870f25737b8f66fe2c1f88a01810013df70cb8155add904288e4'
@@ -40,7 +42,9 @@ sha256sums=('aaa13fcbc149fe0f3f391f933279580f74a96fd312d6ed06b8ff03c2d46672e8'
             '5f9c435d559371216d1c5b49c6ec44bfdb786b12d925d543c286b0764dea0319'
             '91536bb27c6504d6cb0d33775a0c4709a4b439670b900f0c278c25037f19ad66'
             'ccd7c436e959bdc9ab4f15801a67c695b382565b31d8c352254362e67412afcb'
-            '14a72cbc7cc25d91b17470de4c5919654c7aabe07682332e94569948ee328578')
+            '14a72cbc7cc25d91b17470de4c5919654c7aabe07682332e94569948ee328578'
+            'c91fff4e490d32fb1fdd23deda51a0f70aec488cf47f642e8b263f11b107761c'
+            'ef5b6b9a872c267d8b2c41180f341dfd3aac666a6ebe841f1aa9845c632b621f')
 sha512sums=('4d14ecbbb62de1b1c717277f5aae5cfb536e11392f2d4b82c884c1713f437fce8e9dd69a328fa353a55d068d8ee4121a31900f45191acec172d5dc76652b6255'
             '389b1959387f4d5c960901763e45cdcf670fb8de6506ed9d1d49b3c58616f1fb10d5b158b5f89257f3db1bac3a0b270bb35043e7e13e5222549153e83db79ef9'
             'a09a434387e22612a9225ddfa444044977712c6410efe8a77a33d8aa607bd1acbef2a1da08b62e21a4b070f0974ba94ae907ac0452b5d060e33a1c051a7780e4'
@@ -48,15 +52,19 @@ sha512sums=('4d14ecbbb62de1b1c717277f5aae5cfb536e11392f2d4b82c884c1713f437fce8e9
             '7184714a908071a4e8e5c065c5f90255e94dfd072df459c8d6f66fca3647781b3d1f6908b9303bcfd0d5b3f2e3822a8d66efaaa8a7c4d44f6e682839031a6e99'
             'aa501eeeb220ba03b3f101b160230612efbca87694fef88c469b2976d29769c24b34576ea82f6c7941fad6039ac776f32e397add9b957b49bf2e84aeb67b66d6'
             '18c7afb0c3eb8c832893b9ead09d25374b70ae1cd5479a5291d11794906c53daa6f1a1bf698b37efda062bb2b991cacac53a0a6c185ca416b8718fde2bb6a7af'
-            '6cd77f95c4f2bf2c8d32fcb5f9ccde873ce829abb27183bfbaab92b62b07c4a9ab5becbc90bfa0569b8fe5912a8c197d3d43c8560171eb2cefe1f6550b150fe2')
+            '6cd77f95c4f2bf2c8d32fcb5f9ccde873ce829abb27183bfbaab92b62b07c4a9ab5becbc90bfa0569b8fe5912a8c197d3d43c8560171eb2cefe1f6550b150fe2'
+            'a4cf036a43d20f846d2d7fac49f53ec747b4b8b008e6c66f35c6be6281b4ee03e1d19f683d91df1d50933bcd56814a75262f7842562d2bcb44a0fb14bc6f5624'
+            '35c6fafe935e910638960cc7ac25036376569dff2314a2d066bc6c221e36754fa22e1b39acb044523cdd005ce572cc369d7f7af5a5ea4864b661cd38ea2f20de')
 
 prepare() {
   # hacking around to validate with signify
   mv -v "$pkgname-$pkgver.tar.bz2."{signature,sig}
   signify -V -p "$pkgname-$pkgver.pub" -m "$pkgname-$pkgver.tar.bz2"
 
-  patch -d $pkgname-$pkgver -p1 < perl-5.38.patch # Locale fix for perl 5.38
-  patch -d "${pkgname}-${pkgver}" -R -p1 -u < "${srcdir}/screen_c_9_30_half_screen_patch.diff"
+  patch -d "${pkgname}-${pkgver}" -p1 < perl-5.38.patch # Locale fix for perl 5.38
+  patch -d "${pkgname}-${pkgver}" -p0 < enable-wide-glyphs.patch
+  patch -d "${pkgname}-${pkgver}" -p0 < improve-font-rendering.patch
+  patch -d "${pkgname}-${pkgver}" -R -p1 -u < half_screen_prompt_fix.diff
 }
 
 build() {
@@ -91,6 +99,7 @@ build() {
     --enable-xft \
     --enable-xim \
     --enable-xterm-scroll \
+    --enable-wide-glyphs \
     --disable-pixbuf
   make
 }
