--- a/dmenu-git/PKGBUILD
+++ b/dmenu-git/PKGBUILD
@@ -32,6 +32,7 @@ source=("git+https://git.suckless.org/$_pkgname"
         "dmenu-mousesupport-git.diff"
         "dmenu-mousesupport-motion-git.diff"
         "dmenu-numbers-git.diff"
+        "dmenu-preselect-git.diff"
 )
 
 b2sums=('SKIP'
@@ -43,6 +44,7 @@ b2sums=('SKIP'
         'cd5c3e20b4bb55f36b911c89ec70ca8228d38b5d1094fbc56413a21982188a5d80c16ace70328a13173c69d6ac1f0caf60e1f049877d77e426f025d9e1c668b6'
         'f1e6a490368af620e033a91386e4371ba522af5706309b53975f2eb7be409d286508b714581d62bf717a91b30d9436cb9bcdef5aa26b2bdaf8cf520a045e5b42'
         'b98de06aa9467491161f0cf5fcf3a64fa262b96c5ed67eae6bfe4f5117ea274ce10abeabfa066007d68a18a67a9e3d81ec180588770b99b40a92f17a73ce88d1'
+        'd04156981fef019cb72c386ce070266b45a30042f9e9f3b4971a34f20f282468b9d95ffd2e1da6a43906ab2973adc5c483b073cd4b26c96401ed4e2a6d31d121'
 )
 prepare() {
   cd ${_pkgname}
@@ -58,6 +60,7 @@ prepare() {
   patch -p1 -i "$srcdir/dmenu-linesbelowprompt-and-fullwidth-git.diff"
   patch -p1 -i "$srcdir/dmenu-locale-mod-git.diff"
   patch -p1 -i "$srcdir/dmenu-dynamic-buffer-git.diff"
+  patch -p1 -i "$srcdir/dmenu-preselect-git.diff"
 }
 
 build() {
