--- a/overmix-git/PKGBUILD
+++ b/overmix-git/PKGBUILD
@@ -25,7 +25,7 @@ depends=(
 )
 conflicts=("overmix")
 provides=("overmix")
-makedepends=('cmake' 'boost' 'png++')
+makedepends=('cmake' 'boost' 'png++' 'git')
 
 source=("git+${url}"
         "overmix.desktop")
@@ -36,7 +36,6 @@ sha256sums=('SKIP'
 pkgver() {
 	cd $_pkgname
 	printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
-    exit
 }
 
 prepare() {
