--- a/libwgpu-native/PKGBUILD
+++ b/libwgpu-native/PKGBUILD
@@ -6,8 +6,9 @@ pkgdesc='Native WebGPU implementation in Rust, based on wgpu-core'
 url='https://github.com/gfx-rs/wgpu-native'
 arch=('x86_64')
 license=('MIT')
-makedepends=('rust' 'llvm' 'clang')
+makedepends=('rust' 'llvm' 'clang' 'git')
 provides=('libwgpu_native.so')
+conflicts=('libwgpu-native')
 _commit="d89e5a93f5fd0bb3ce28f09571dbbefea37712c9" # tags/v0.19.4.1
 source=("git+https://github.com/gfx-rs/wgpu-native#commit=$_commit")
 sha256sums=('SKIP')
